--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Hi Im Mani</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>updating...</h1>
     </body>
 </html>
