--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MANIX</title>
-</head>
-<body>
-  <h1>EMOTIONALLY NOT AVAILABLE RIGHT NOW</h1>
-</body>
-</html>
+<div class="hub">
+  <span contenteditable="true">MANIX</span>
+  <span contenteditable="true">AHMADI</span>
+</div>
