--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <div class="hub">
   <span contenteditable="true">MANIX</span>
   <span contenteditable="true">AHMADI</span>
