--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="style.css">
+  <title>Yamete Kudsai</title>
 </head>
 <div class="hub">
   <span contenteditable="true">MANIX</span>
